#1595: Code clean-up of FORM_FIELD_DEFINITIONS